fix: first pass at various improvements

--- a/src/index.html
+++ b/src/index.html
@@ -2,14 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>A Marketplace For Services | Redbud Way</title>
-  <meta name="description" content="A marketplace to Shop, Book, and Pay for all your service needs." />
+  <title>Redbud Way - Marketplace for Services | Shop, Book & Pay</title>
+  <meta name="description" content="Redbud Way is a trusted marketplace for services. Shop, book, and pay for professional services from verified providers. Instant booking, secure payments, and reliable service delivery." />
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  
+  <!-- Open Graph / Facebook -->
   <meta property="og:site_name" content="Redbud Way" />
-  <meta property="og:title" content="A marketplace for services | Redbud Way" />
-  <meta property="og:description" content="A marketplace to Shop, Book, and Pay for all your service needs." />
+  <meta property="og:title" content="Redbud Way - Marketplace for Services | Shop, Book & Pay" />
+  <meta property="og:description" content="Redbud Way is a trusted marketplace for services. Shop, book, and pay for professional services from verified providers. Instant booking, secure payments, and reliable service delivery." />
   <meta property="og:image" content="https://redbudway.com/assets/images/logo.jpg">
   <meta property="og:image:secure_url" content="https://redbudway.com/assets/images/logo.jpg">
   <meta property="og:image:type" content="image/png" />
@@ -18,16 +20,34 @@
   <meta property="og:url" content="https://redbudway.com/">
   <meta property="og:type" content="website" />
 
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Redbud Way - Marketplace for Services">
+  <meta name="twitter:description" content="Shop, book, and pay for professional services from verified providers. Instant booking, secure payments, and reliable service delivery.">
+  <meta name="twitter:image" content="https://redbudway.com/assets/images/logo.jpg">
+
+  <!-- Additional SEO Meta Tags -->
+  <meta name="keywords" content="service marketplace, professional services, book services, service providers, instant booking, secure payments, service quotes, service marketplace">
+  <meta name="author" content="Redbud Way">
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="English">
+  <meta name="revisit-after" content="7 days">
+
   <script type="application/ld+json">
     {
       "@context": "https://schema.org",
       "@type": "Website",
       "name": "Redbud Way",
-      "description": "A marketplace to Shop, Book, and Pay for all your service needs.",
+      "description": "A trusted marketplace for services. Shop, book, and pay for professional services from verified providers.",
       "url": "https://redbudway.com",
-      "image": "https://redbudway.com/assets/images/logo.jpg"
+      "image": "https://redbudway.com/assets/images/logo.jpg",
+      "potentialAction": {
+        "@type": "SearchAction",
+        "target": "https://redbudway.com/search?q={search_term_string}",
+        "query-input": "required name=search_term_string"
+      }
     }
-    </script>
+  </script>
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
